# WikiParser

Wiki_Qt_Parser/: CMakeLists.txt  ThreadedIndexer.cpp  main.cpp  vcpkg.json  wiki_qt_parser.cpp  wiki_qt_parser.h
Wiki_Qt_Parser/shared/: Array.h  SimpleXml.cpp  SimplestXml.cpp
wikiparserconsole/: CMakeLists.txt  main.cpp  vcpkg.json
